# Xirang

./: .gitignore  AGENTS.md  README.md  figma-endless-abyss-node.md  figma-game-mode-node.md  render.yaml
backend/: .env.example  .gitignore  .tmp_mypy.txt  .tmp_ruff.txt  README.md  alembic.ini  mock_pageindex_server.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13210a3f6138_merge_quest_and_learning_paths_heads.py  20260408_shop_effects_tables.py  20260409_add_active_effects_uq.py  20260409_add_quest_tables.py  20260410_add_updated_at_to_active_effects.py  20260410b901_fix_runs_mode_constraint_for_review.py  507acdd5e79f_add_documents_content_text_for_text_.py  53c6b1672747_add_learning_paths_and_learning_path_stages.py  5f1feb885f66_phase1_models.py  8c7f9a21d4f0_expand_document_formats.py  9f42c6d1e8aa_fix_documents_format_constraint.py  c1e5b2a9f4d1_add_runs_mode_state.py  dc8e89e781a0_learning_paths_and_subscriptions.py  e2fae03e8983_merge_learning_paths_subscriptions_and_.py  e7f3c4a2d1b0_add_review_run_mode.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/repositories/: auth_repository.py  document_repository.py  effect_repository.py  leaderboard_repository.py  learning_path_repository.py  notification_repository.py  profile_repository.py  quest_repository.py  run_repository.py  settings_repository.py  shop_repository.py  user_repository.py  wallet_repository.py
backend/app/schemas/: auth.py  documents.py  leaderboard.py  learning_path.py  profile.py  quest.py  review.py  runs.py  settings.py  shop.py  user.py
backend/app/workers/: feedback_learning_job.py  job_runner.py  main.py  registry.py
backend/tests/: __init__.py  test_project_layout.py
backend/tests/api/: test_app_lifespan.py  test_auth_api.py  test_auth_wiring.py  test_auth_wiring_integration.py  test_danger_zone_api.py  test_document_ai_api.py  (+13 more)
(+365 files in other folders)
